--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -19,3 +19,21 @@ p{
     font-family: 'Sofia Sans', sans-serif;
 }
 
+.sidebar {
+    width: 0;
+    position: fixed;
+    top: 0;
+    right: 0;
+    height: 100%;
+    background-color: #f4f4f4;
+    overflow-x: hidden;
+    overflow-y: auto;
+    transition: 0.5s;
+    padding: 10px;
+    z-index: 1000;
+}
+
+/* Classe para exibir o sidebar */
+.sidebar.open {
+    width: 250px;
+}
